--- a/ios/escape/escape/Info.plist
+++ b/ios/escape/escape/Info.plist
@@ -15,5 +15,9 @@
 			</array>
 		</dict>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app uses your location to show your current position on the map and help you find nearby emergency shelters.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>This app uses your location to show your current position on the map and help you find nearby emergency shelters.</string>
 </dict>
 </plist>
