--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,28 @@
-CLAUDE.md
 .DS_Store
 
-# Xcode
+# Xcode - User-specific files
 *.xcworkspace/xcuserdata/
 *.xcodeproj/project.xcworkspace/xcuserdata/
 *.xcodeproj/xcuserdata/
 **/*xcuserdata*
-supabase/.temp
-supabase/supabase
+
+# Xcode - Build products
+DerivedData/
+build/
+*.build/
+
+# Xcode - State files
+*.xcuserstate
+*.xcscmblueprint
+*.xccheckout
 
 # Configuration files with secrets
 ios/escape/escape/Supabase.swift
+
+# Supabase
+supabase/.temp
+supabase/supabase
+
+# Swift Package Manager
+.swiftpm/
+*.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/
