--- a/.gitignore
+++ b/.gitignore
@@ -25,4 +25,5 @@ supabase/supabase
 
 # Swift Package Manager
 .swiftpm/
-*.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/
+*.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/*
+!*.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/Package.resolved
