--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,3 +9,11 @@ repos:
     rev: 0.57.2
     hooks:
       - id: swiftformat
+-   repo: local
+    hooks:
+      - id: sort-localizable-xcstrings
+        name: Sort Localizable.xcstrings
+        entry: bash -c 'for file in "$@"; do jq --sort-keys . "$file" > "$file.tmp" && mv "$file.tmp" "$file"; done' --
+        language: system
+        files: 'Localizable\.xcstrings$'
+        pass_filenames: true
