feat: use config

--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,6 @@ supabase/.temp
 supabase/supabase
 
 # Configuration files with secrets
+ios/escape/escape/supabase.swift
 ios/escape/escape/Supabase.swift
+ios/escape/Config.xcconfig
