--- a/ios/escape/escape/Info.plist
+++ b/ios/escape/escape/Info.plist
@@ -8,7 +8,7 @@
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>CFBundleURLName</key>
-			<string>com.tk-a-2505.hinan</string>
+			<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>io.supabase.user-management</string>
