--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -44,7 +44,7 @@ jobs:
         run: pnpm install
 
       - name: Build with Next.js
-        run: pnpm build
+        run: pnpm build:gh
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
