--- a/.gitignore
+++ b/.gitignore
@@ -33,5 +33,5 @@ supabase/supabase
 
 web/.next
 web/out
-
-CLAUDE.md
+ios/escape/escape.xcodeproj/project.pbxproj
+ios/escape/escape/Supabase.swift
