--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -31,32 +31,11 @@ jobs:
     - name: Show available schemes
       run: xcodebuild -list -project ios/escape/escape.xcodeproj
 
-    - name: Create Config.xcconfig if not exists
-      working-directory: ios/escape
-      run: |
-        if [ ! -f Config.xcconfig ]; then
-          echo "Creating Config.xcconfig from example..."
-          if [ -f Config.xcconfig.example ]; then
-            cp Config.xcconfig.example Config.xcconfig
-            # Replace placeholder team ID with empty string for unsigned builds
-            sed -i '' 's/DEVELOPMENT_TEAM = YOUR_TEAM_ID_HERE/DEVELOPMENT_TEAM = /' Config.xcconfig || true
-          else
-            # Create a basic config file if example doesn't exist
-            cat > Config.xcconfig << EOF
-        // Configuration file for build settings
-        PRODUCT_BUNDLE_IDENTIFIER = com.tk-a-2505.hinan
-        DEVELOPMENT_TEAM =
-        SUPABASE_URL = \${SUPABASE_URL}
-        SUPABASE_ANON_KEY = \${SUPABASE_ANON_KEY}
-        EOF
-          fi
-        fi
-
     - name: Create supabase.swift if not exists
       working-directory: ios/escape/escape
       env:
-        SUPABASE_URL: ${{ secrets.SUPABASE_URL || 'https://wmmddehrriniwxsgnwqy.supabase.co' }}
-        SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY || 'placeholder-anon-key' }}
+        SUPABASE_URL: ${{ secrets.SUPABASE_URL}}
+        SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY}}
       run: |
         if [ ! -f supabase.swift ]; then
           echo "Creating supabase.swift..."
@@ -78,28 +57,6 @@ jobs:
           fi
         fi
 
-    - name: Build iOS App for Simulator (Test)
-      working-directory: ios/escape
-      run: |
-        xcodebuild clean build \
-          -project escape.xcodeproj \
-          -scheme escape \
-          -destination 'platform=iOS Simulator,name=iPhone 15,OS=17.2' \
-          -configuration Debug \
-          CODE_SIGNING_ALLOWED=NO \
-          | xcpretty || true
-
-    - name: Run Tests
-      working-directory: ios/escape
-      run: |
-        xcodebuild test \
-          -project escape.xcodeproj \
-          -scheme escape \
-          -destination 'platform=iOS Simulator,name=iPhone 15,OS=17.2' \
-          CODE_SIGNING_ALLOWED=NO \
-          | xcpretty || true
-      continue-on-error: true
-
     - name: Build iOS App for Device
       working-directory: ios/escape
       run: |
@@ -117,16 +74,6 @@ jobs:
           DEVELOPMENT_TEAM="" \
           PROVISIONING_PROFILE_SPECIFIER="" \
           | xcpretty || cat
-
-    - name: Debug - Check Build Products
-      working-directory: ios/escape
-      if: always()
-      run: |
-        echo "=== Checking build output ==="
-        ls -la ./build/DerivedData/Build/Products/ || echo "Products directory not found"
-        echo ""
-        echo "=== Looking for .app bundles ==="
-        find ./build/DerivedData/Build/Products -name "*.app" -type d || echo "No .app bundles found"
 
     - name: Package as IPA
       working-directory: ios/escape
