--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -31,6 +31,27 @@ jobs:
     - name: Show available schemes
       run: xcodebuild -list -project ios/escape/escape.xcodeproj
 
+    - name: Create Config.xcconfig if not exists
+      working-directory: ios/escape
+      run: |
+        if [ ! -f Config.xcconfig ]; then
+          echo "Creating Config.xcconfig from example..."
+          if [ -f Config.xcconfig.example ]; then
+            cp Config.xcconfig.example Config.xcconfig
+            # Replace placeholder team ID with empty string for unsigned builds
+            sed -i '' 's/DEVELOPMENT_TEAM = YOUR_TEAM_ID_HERE/DEVELOPMENT_TEAM = /' Config.xcconfig || true
+          else
+            # Create a basic config file if example doesn't exist
+            cat > Config.xcconfig << EOF
+        // Configuration file for build settings
+        PRODUCT_BUNDLE_IDENTIFIER = com.tk-a-2505.hinan
+        DEVELOPMENT_TEAM =
+        SUPABASE_URL = \${SUPABASE_URL}
+        SUPABASE_ANON_KEY = \${SUPABASE_ANON_KEY}
+        EOF
+          fi
+        fi
+
     - name: Create supabase.swift if not exists
       working-directory: ios/escape/escape
       env:
