--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -22,6 +22,9 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
+    - name: Select Xcode 15.4
+      run: sudo xcode-select -s /Applications/Xcode_15.4.app/Contents/Developer
+
     - name: List available Xcode versions
       run: ls /Applications | grep Xcode
 
@@ -76,6 +79,7 @@ jobs:
     - name: Build iOS App for Device
       working-directory: ios/escape
       run: |
+        set -o pipefail
         xcodebuild clean build \
           -project escape.xcodeproj \
           -scheme escape \
@@ -89,7 +93,7 @@ jobs:
           CODE_SIGNING_ALLOWED=NO \
           DEVELOPMENT_TEAM="" \
           PROVISIONING_PROFILE_SPECIFIER="" \
-          | xcpretty || cat
+          | xcpretty && exit ${PIPESTATUS[0]} || exit 1
 
     - name: Package as IPA
       working-directory: ios/escape
