--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -22,11 +22,20 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Select Xcode 15.4
-      run: sudo xcode-select -s /Applications/Xcode_15.4.app/Contents/Developer
-
     - name: List available Xcode versions
       run: ls /Applications | grep Xcode
+
+    - name: Select Xcode 15.x
+      run: |
+        # Find the latest Xcode 15.x version available
+        XCODE_15=$(ls /Applications | grep "Xcode_15" | sort -V | tail -n 1)
+        if [ -z "$XCODE_15" ]; then
+          echo "No Xcode 15.x found, using default Xcode"
+          xcodebuild -version
+        else
+          echo "Selecting $XCODE_15"
+          sudo xcode-select -s /Applications/${XCODE_15}/Contents/Developer
+        fi
 
     - name: Show Xcode version
       run: xcodebuild -version
